# OpenGLStudy

./: .clang-format  .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/lib/: glfw3.lib
dependencies/stb/: stb_image.h
renderer/: CMakeLists.txt
renderer/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
sp01/: CMakeLists.txt
sp01/resources/shaders/: basic.shader  batch.shader
sp01/src/: Application.cpp
sp01/src/tests/: Test.cpp  Test.h  TestBatchRendering.cpp  TestBatchRendering.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
sp02/: CMakeLists.txt
sp02/src/: main.cpp
