project(sp01)

file(
    COPY ${CMAKE_CURRENT_SOURCE_DIR}/resources
    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
    FILES_MATCHING PATTERN *
)

file(GLOB_RECURSE SOURCE src/**.cpp)

add_executable(${PROJECT_NAME}
    ${GLAD_SOURCE}
    ${IMGUI_SOURCE}
    ${STB_SOURCE}

    ${SOURCE}
)

target_link_libraries(${PROJECT_NAME} ${REQUIRED_LIBS})
